{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 160,
  "lineage": "9da0a519-5b70-6019-f442-188cfbaf9106",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "grafana_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3729bff0f82c919",
            "arn": "arn:aws:ec2:eu-west-1:265309804877:instance/i-0c9c8c3a1a95ae011",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9c8c3a1a95ae011",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dlt",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a4d65a3d3fe165ec",
            "private_dns": "ip-10-8-2-149.eu-west-1.compute.internal",
            "private_ip": "10.8.2.149",
            "public_ip": "54.194.175.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ad332f1c33e2cd54",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0648083a809eee287",
            "tags": {
              "Name": "grafana_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c6159aeb7d5633a2"
            ]
          },
          "dependencies": [
            "aws_security_group.Graf-sg",
            "aws_subnet.graf_net",
            "aws_vpc.monitor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prometheus_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01c21ed914a2ea6fa",
            "arn": "arn:aws:ec2:eu-west-1:265309804877:instance/i-091a13bd31850c36d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091a13bd31850c36d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dlt",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f4a003e2f5989c27",
            "private_dns": "ip-10-8-1-9.eu-west-1.compute.internal",
            "private_ip": "10.8.1.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06761af58e12b7102",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a31511e419da4c87",
            "tags": {
              "Name": "prometheus_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08f28922f4a55e6ff"
            ]
          },
          "dependencies": [
            "aws_security_group.Prom_sg",
            "aws_subnet.prom_net",
            "aws_vpc.monitor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:265309804877:internet-gateway/igw-0d56bb102a0076802",
            "id": "igw-0d56bb102a0076802",
            "owner_id": "265309804877",
            "tags": {
              "Name": "monitor-gateway"
            },
            "vpc_id": "vpc-002ed15860dcde685"
          },
          "dependencies": [
            "aws_vpc.monitor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c0bb19168ca3e927",
            "owner_id": "265309804877",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d56bb102a0076802",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-002ed15860dcde685"
          },
          "dependencies": [
            "aws_internet_gateway.monitor",
            "aws_vpc.monitor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Graf-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04395f48c90b0fc9f",
            "route_table_id": "rtb-0c0bb19168ca3e927",
            "subnet_id": "subnet-0648083a809eee287"
          },
          "dependencies": [
            "aws_internet_gateway.monitor",
            "aws_route_table.rtable",
            "aws_subnet.graf_net",
            "aws_vpc.monitor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Graf-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:265309804877:security-group/sg-0c6159aeb7d5633a2",
            "description": "Security group for public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound to the world",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6159aeb7d5633a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Prometheus",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "server access to ",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "Grafana Private subnet",
            "name_prefix": "",
            "owner_id": "265309804877",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-002ed15860dcde685"
          },
          "dependencies": [
            "aws_vpc.monitor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Prom_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:265309804877:security-group/sg-08f28922f4a55e6ff",
            "description": "Security group for Prometheus public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f28922f4a55e6ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Prometheus-Public",
            "name_prefix": "",
            "owner_id": "265309804877",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-002ed15860dcde685"
          },
          "dependencies": [
            "aws_vpc.monitor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "graf_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:265309804877:subnet/subnet-0648083a809eee287",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.8.2.0/24",
            "id": "subnet-0648083a809eee287",
            "map_public_ip_on_launch": true,
            "owner_id": "265309804877",
            "tags": {
              "Name": "Grafana Public-Subnet"
            },
            "vpc_id": "vpc-002ed15860dcde685"
          },
          "dependencies": [
            "aws_vpc.monitor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prom_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:265309804877:subnet/subnet-0a31511e419da4c87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.8.1.0/24",
            "id": "subnet-0a31511e419da4c87",
            "map_public_ip_on_launch": false,
            "owner_id": "265309804877",
            "tags": {
              "Name": "Prometheus Private-subnet"
            },
            "vpc_id": "vpc-002ed15860dcde685"
          },
          "dependencies": [
            "aws_vpc.monitor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:265309804877:vpc/vpc-002ed15860dcde685",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.8.0.0/16",
            "default_network_acl_id": "acl-081944c5c15075d62",
            "default_route_table_id": "rtb-020cfb8233bc1d5e5",
            "default_security_group_id": "sg-0316f6d81530f66fb",
            "dhcp_options_id": "dopt-000a63d1428a6dc57",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-002ed15860dcde685",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-020cfb8233bc1d5e5",
            "owner_id": "265309804877",
            "tags": {
              "Name": "Monitor"
            }
          }
        }
      ]
    }
  ]
}